test/compiler/success/_list.ods
do []
do [1]
do [1, 2, 3]
do [42.0, 42.5]
do ["hello", "world"]
do [true, false, true]

do print([])
do print([1])
do print([1, 2, 3])
do print([42.0, 42.5])
do print(["Hello, ", "world!"])
do print([true, false, true])
