test/compiler/fail/_list_head_types.ods
do head([1,2,3]) || true
